export enum MeasureUnit {
  CELSIUS = 'celsius',
  FAHRENHEIT = 'fahrenheit',
  PERCENTAGE = 'percentage',
  PASCAL = 'pascal',
  BAR = 'bar'
}
