export interface DeviceEndpoint {
  readonly ipAddress: string
  readonly port: number
}
