export interface DeviceId {
  readonly value: string
}
