export enum CapabilityType {
  VIDEO = 'video',
  SENSOR = 'sensor'
}
